--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -141,14 +141,19 @@
             <option value="5">5 (Strongly Agree)</option>
             </select>
             <br>
+            <h3>Submit your info and see your match below!</h3>
             <div class="text-center">
                 <button type="submit" class="btn btn-primary btn-md" id="submit-btn"><span class="fa"></span>Submit</button>
             </div>
         </div>
-        <div class="match">
-            <h3>Submit your info and see your match below!</h3>
+        <div id="myModal" class="modal">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <div class="modal-content">
+            <h3>Your Match:</h3>
             <h4 id="match-name"></h4>
-            <img id="match-photo" src="">
+            <img id="match-photo" src="" width="250px">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
@@ -191,14 +196,20 @@ $("#submit-btn").on("click", function(event){
             ]
         };
 
-        $.post("api/friends", newFriend, function(data){
+        $.post("/api/friends", newFriend, function(data){
             console.log(data)
-            $("#match-name").text(data.name)
-            $("#match-photo").attr("src", data.photo)
         });
     } else {
         $("#match-name").text("Please fill out all inputs on the form.")
     }
+
+    $.get("/api/match", function(data){
+        console.log(data)
+        $("#match-name").text(data[0])
+        $("#match-photo").attr("src", data[1])
+
+        $("#myModal").modal("toggle");
+    })
 })
 </script>
 
