--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,6 +10,7 @@
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script
         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -18,13 +19,17 @@
 <body>
     <div class="container">
         <div class="jumbotron">
+            <img class="mag" src="assets/images/search.png">
             <h1>Friend Finder</h1>
             <h2>Take a quiz, find a friend!</h2>
             <h3>Compatibility matched through 10 quick statements about yourself</h3>
             <hr>
-            <a href="/survey"><button id= "take-survey" class="btn btn-danger btn-lg"><span class="fa"></span>Take Survey</button></a>
+            <a href="/survey"><button id= "take-survey" class="btn btn-lg"><span class="fa"></span>Take Survey</button></a>
         </div>
         <a href="/api/friends">API Friends List</a> | <a href="https://github.com/EWeb-327/friendFinder">GitHub Repo</a>
     </div>
+<footer>
+    <div id="credit">Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+</footer>
 </body>
 </html>
